<package format="2">
	<name>tuna_bringup</name>
	<version>0.1.0</version>
	<description>Karl launch nodes.</description>

	<maintainer email="vid.rijavec@gmail.com">Vid Rijavec</maintainer>

	<author>Vid Rijavec</author>

	<license>MIT</license>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>std_msgs</depend>
	<depend>sensor_msgs</depend>

	<build_depend>message_generation</build_depend>
	<build_export_depend>message_runtime</build_export_depend>

	<exec_depend>message_runtime</exec_depend>
	<exec_depend>rospy</exec_depend>

</package>
