<package format="2">
	<name>tuna_ezmap</name>
	<version>0.0.1</version>
	<description>Tuna mod for EZ-Map.</description>

	<maintainer email="vr@ubiquityrobotics.org">Vid Rijavec</maintainer>

	<author>Vid Rijavec</author>

	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>std_msgs</depend>
	<build_depend>message_generation</build_depend>
	<build_export_depend>message_runtime</build_export_depend>

	<exec_depend>message_runtime</exec_depend>
	<exec_depend>rospy</exec_depend>

</package>
